# TRANSAT

./: .gitignore  README.md  buildDist.sh  build_dist.sh  pyproject.toml  setup.py
man/: satAttack.1  satAttack.1.md  satVerify.1  satVerify.1.md
src/: __init__.py  abcAttack.py  abcAttack_cli.py  crTRAPFabricBuilder.py  crTRAPFabricBuilder_cli.py  globals.py  lutCRFabricBuilder.py  lutCRFabricBuilder_cli.py  satAttack.py  satAttack_cli.py  satVerify.py  satVerify_cli.py  stateLocate.py  stateLocate_cli.py  trapFabricBuilder.py  trapFabricBuilder_cli.py
src/strapt/: satAttack.py
test/Test02-C17/: c17.py  c17.v  c17Locked.v  encryptC17io.csv  encryptC17pl.py  runAttackAndVerify.sh
test/Test02-C17/debug/: miter_cp1.py  miter_cp2.py  miter_cp3.py  miter_final.py
test/Test02-C17/work/: dipCircuits.py  extracted_key.csv  miter.py  verMiter.py
test/Test08-TRAP_NAND2/: ioMap.csv  nand2PL.py  runAttackAndVerify.sh  trapNAND2.py  trapNAND2_io.csv  trapUnitHandwrittenPL.py  trapUnitHandwrittenPL_io.csv  twoInputGates.v
test/Test08-TRAP_NAND2/work/: dipCircuits.py  extracted_key.csv  miter.py  verMiter.py
test/Test09-LUT+Friends/: io.csv  lutWithLogic.py  oracle.py  oracle.v  runAndVerify.sh
test/Test09-LUT+Friends/work/: dipCircuits.py  extracted_key.csv  miter.py  verMiter.py
test/Test11-State_Detection/: dff.py  dff_io.csv  lfsr.py  lfsr_io.csv  s27.py  s27.v  s27_io.csv  s27_tb.v  s298.py  s298_io.csv  srLatchExample.csv  srLatchExample.py  testFlopCircuit.py  testFlopCircuit_io.csv
tests/Test02-C17/: encryptC17pl.py  inList.txt  keyList.txt  outList.txt  runAttack.sh  satAttack.py
tests/Test02-C17/outputs_May-07-2023_09-54PM/: dipCircuits.py  extracted_key.txt  miter.py
tests/Test03-Small_Custom/: custom.v  encryptCustom_pl.py  inList.txt  keyList.txt  runAttack.sh  satAttack.py
tests/Test03-Small_Custom/outputs_May-07-2023_04-46PM/: dipCircuits.py  extracted_key.txt  miter.py
