[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strapt"
version = "0.0.1"
authors = [
  { name="axf190026", email="aric.fowler@utdallas.edu" },
]
description = "STRAPT is a set of SAT tools for solving the University of Texas - Dallas TRAP circuit technology, built around the Microsoft Z3 SMT solver."
readme = "README.md"
requires-python = ">=3.10"
install_requires=[
    'z3-solver',
    'glob',
    'argparse',
    'shutil',
    're',
    'logging',
    'datetime',
    'typing',
    'apt'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://cometmail.sharepoint.com/sites/ECETRAP-SecurityAnalysis/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x0120005DC35724679FFA43B3870ABD93481C76&id=%2Fsites%2FECETRAP%2DSecurityAnalysis%2FShared%20Documents%2FSecurity%20Analysis%2FIn%2DHouse%20SAT%20Tools%2FSAT%5FAttack%5Fv2&viewid=bed26541%2D81f2%2D4c77%2D9fae%2D5d41a0958767"
"Bug Tracker" = ""
